# PMC

./: README.md
PMC_source/: CMakeLists.txt  Cluster.cpp  ContainerClusters.cpp  main.cpp  subspaceClustering.h
demo/: data.txt  labels.txt
demo/res/: PMC_clustering_43.txt  PMC_clustering_44.txt  PMC_clustering_45.txt  PMC_clustering_46.txt  PMC_clustering_47.txt  PMC_description_43.txt  PMC_description_44.txt  PMC_description_45.txt  PMC_description_46.txt  PMC_description_47.txt
